[package]
name = "masterserver"
version = "1.0.0"
edition = "2021"

[dependencies]
axum = {version = "0.7.7", features = ["ws"]}
tokio = {version = "1.40.0", features = ["full"]}
tower-http = "0.6.1"
futures = "0.3.30"
tokio-tungstenite = "0.24.0"
uuid = {version = "1.10.0", features = ["v4", "serde"]}
serde = {version = "1", features = ["derive"]}
serde_json = {version = "1"}
matchbox_signaling = "0.10.0"
matchbox_protocol = "0.10.0"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }